<resources>
    <string name="app_name">My Book Shop</string>
    <string name="save">Save</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>

    <!-- Category spinner options -->
    <string name="category_general">General</string>
    <string name="category_fiction">Fiction</string>
    <string name="category_children">Children</string>
    <string name="category_science_fiction">Science Fiction</string>
    <string name="category_art_photography">Art &amp; Photography</string>
    <string name="category_biography">Biography</string>
    <string name="category_crime_thriller">Crime &amp; Thriller</string>
    <string name="category_history">History</string>
    <!--/-->

    <string name="empty_view_title_text">No books in this shop…</string>
    <string name="empty_view_subtitle_text">Click the button above to add some books</string>
    <string name="sale">Sale</string>
    <string name="details">Details</string>

    <string name="quantity_label">Quantity:</string>

    <!-- Editor activity titles -->
    <string name="add_book">Add a Book</string>
    <string name="edit_book">Edit Book</string>
    <string name="book_details">Book Details</string>
    <!--/-->

    <!-- Labels for editor fields -->
    <string name="label_name">Name</string>
    <string name="label_author">Author</string>
    <string name="label_year">Year</string>
    <string name="label_category">Category</string>
    <string name="label_price">Price</string>
    <string name="label_quantity">Quantity</string>
    <!--/-->

    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="label_supplier_name">Name</string>
    <string name="label_supplier_phone">Phone</string>
    <string name="supplier_details">Supplier Details</string>
    <string name="order">Order</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_about">About</string>
    <string name="view_book">Book Details</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="quantity_zero">Quantity cannot be less than 0</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- App shortcuts -->
    <string name="shortcut_add_short_label">Add</string>
    <string name="shortcut_add_long_label">Add a book</string>
    <string name="shortcut_add_disabled">Can\'t add a book at the moment</string>
    <!--/-->

    <!-- Credits -->
    <string name="credit_icons">"Icons designed by Freepik from Flaticon"</string>
    <string name="action_delete_all">Delete all entries</string>
    <!--/-->

    <string name="developer_options">Developer Options</string>
    <string name="success_add">Book added successfully</string>
    <string name="error_add">Error adding book</string>
    <string name="fill_fields">Please fill all the fields</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted successfully</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="success_edit">Book updated successfully</string>
    <string name="error_edit">Error updating book</string>
    <string name="editor_delete_book_successful_all">All books deleted</string>
    <string name="editor_delete_book_failed_all">Error deleting all books</string>
    <string name="required_message">Field is required</string>

    <!-- Strings For Order By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_year_asc_value</string>

    <!-- Label for order_by year asc option [CHAR LIMIT=20] -->
    <string name="settings_order_by_year_asc_label">Year (ascending)</string>
    <string name="settings_order_by_year_asc_value" translatable="false">year</string>

    <!-- Label for order_by year desc option [CHAR LIMIT=20] -->
    <string name="settings_order_by_year_desc_label">Year (descending)</string>
    <string name="settings_order_by_year_desc_value" translatable="false">year DESC</string>

    <!-- Label for order_by book name asc option [CHAR LIMIT=20] -->
    <string name="settings_order_by_name_asc_label">Name (ascending)</string>
    <string name="settings_order_by_name_asc_value" translatable="false">name COLLATE NOCASE</string>

    <!-- Label for order_by book name desc option [CHAR LIMIT=20] -->
    <string name="settings_order_by_name_desc_label">Name (descending)</string>
    <string name="settings_order_by_name_desc_value" translatable="false">name COLLATE NOCASE DESC</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Settings</string>
</resources>
