<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_about"
            android:title="@string/action_about"
            app:showAsAction="ifRoom" />
    </group>
    <group>
        <item android:title="@string/developer_options">
            <menu>
                <item
                    android:id="@+id/action_insert_dummy_data"
                    android:title="@string/action_insert_dummy_data"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_delete_all"
                    android:title="@string/action_delete_all"
                    app:showAsAction="never" />
            </menu>
        </item>
    </group>


</menu>